# cardamum

./: .cliffignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  SECURITY.md  build.rs  config.examples.toml  config.sample.toml  default.nix  deny.toml  flake.nix  install.sh  package.nix  shell.nix
.github/workflows/: releases.yml
docs/: README.md  architecture.md  contacts-mapping.md  custom-data.md  merged-view.md  specific-apis-design.md
docs/testing/: carddav-fastmail.md  carddav-google.md  carddav-icloud.md  carddav-specific.md  google-people-specific.md  google-people.md  jmap-fastmail.md  jmap-specific.md  msgraph-microsoft.md  msgraph-specific.md  provider-test-plan.md  vdir-local.md
src/: backend.rs  cli.rs  client.rs  config.rs  contact.rs  lib.rs  main.rs  project.rs  serde.rs  std.rs  table.rs  wizard.rs
src/account/: account.rs  check.rs  cli.rs  config.rs  configure.rs  context.rs  de.rs  list.rs  mod.rs
src/addressbook/: mod.rs  table.rs
src/addressbook/command/: create.rs  delete.rs  discover.rs  list.rs  mod.rs  update.rs
src/card/: mod.rs  table.rs  utils.rs
src/card/command/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
src/carddav/: backend.rs  cli.rs  client.rs  config.rs  create.rs  delete.rs  discover.rs  get.rs  list.rs  mkcol.rs  mod.rs  propfind.rs  proppatch.rs  put.rs  report.rs  secret.rs  stream.rs
src/carddav/report/: cli.rs  entries.rs  mod.rs  multiget.rs  query.rs  sync.rs
src/carddav/sans-io/: flow-addressbook-home-set.rs  flow-addressbooks.rs  flow-contact-list.rs  flow-current-user-principal.rs  mod.rs
src/completion/: command.rs
src/google/: backend.rs  cli.rs  client.rs  input.rs  mod.rs  project.rs  render.rs
src/google/connection/: cli.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  search.rs  update.rs
src/google/contact_group/: cli.rs  create.rs  delete.rs  get.rs  list.rs  members.rs  mod.rs  update.rs
src/google/other_contact/: cli.rs  copy.rs  fields.rs  list.rs  mod.rs  search.rs
src/google/profile/: cli.rs  get.rs
src/http/sans-io/: flow-send-receive.rs  request.rs
src/jmap/: backend.rs  cli.rs  client.rs  input.rs  mod.rs  project.rs  render.rs
src/jmap/address_book/: changes.rs  cli.rs  create.rs  destroy.rs  get.rs  mod.rs  update.rs
src/jmap/contact_card/: changes.rs  cli.rs  copy.rs  create.rs  destroy.rs  get.rs  mod.rs  query.rs  update.rs
src/jmap/session/: cli.rs  get.rs
src/manual/: command.rs
src/msgraph/: backend.rs  cli.rs  client.rs  mod.rs  project.rs
src/msgraph/contact/: cli.rs  create.rs  delete.rs  delta.rs  get.rs  input.rs  list.rs  mod.rs  render.rs  update.rs
src/msgraph/contact_folder/: child_folders.rs  cli.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  rename.rs  render.rs
src/msgraph/profile/: cli.rs  get.rs
src/sans-io/: flow-contact-list.rs  flow.rs  io.rs  mod.rs
src/shared/: arg.rs  client.rs  mod.rs
src/shared/addressbook/: cli.rs  create.rs  delete.rs  list.rs  mod.rs  types.rs  update.rs
src/shared/card/: cli.rs  create.rs  delete.rs  list.rs  mod.rs  read.rs  types.rs  update.rs  vcard.rs
src/tcp/: std.rs
src/tcp/sans-io/: flow.rs
src/tls/: std.rs
src/vdir/: backend.rs  cli.rs  client.rs  config.rs  create.rs  delete.rs  list.rs  mod.rs  rename.rs
src/vdir/item/: cli.rs  create.rs  delete.rs  get.rs  input.rs  list.rs  mod.rs  update.rs
src/wizard/: account.rs  carddav.rs  discover.rs  edit.rs  google.rs  jmap.rs  mod.rs  msgraph.rs  search.rs  secret.rs
