[package]
name = "cardamum"
description = "CLI to manage contacts"
version = "0.2.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["cli", "contact", "carddav", "jmap", "vdir"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/cardamum"
repository = "https://github.com/pimalaya/cardamum"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls-ring", "carddav", "jmap", "msgraph", "google", "vdir"]
carddav = ["dep:io-webdav", "dep:getrandom"]
jmap = ["dep:io-jmap", "dep:calcard", "dep:base64"]
msgraph = ["dep:io-msgraph", "dep:vcard-rs"]
google = ["dep:io-google-people", "dep:vcard-rs"]
vdir = ["dep:io-vdir"]
native-tls = ["pimalaya-stream/native-tls", "pimconf/native-tls", "io-webdav?/native-tls", "io-jmap?/native-tls", "io-msgraph?/native-tls", "io-google-people?/native-tls"]
rustls-aws = ["pimalaya-stream/rustls-aws", "pimconf/rustls-aws", "io-webdav?/rustls-aws", "io-jmap?/rustls-aws", "io-msgraph?/rustls-aws", "io-google-people?/rustls-aws"]
rustls-ring = ["pimalaya-stream/rustls-ring", "pimconf/rustls-ring", "io-webdav?/rustls-ring", "io-jmap?/rustls-ring", "io-msgraph?/rustls-ring", "io-google-people?/rustls-ring"]
vendored = ["pimalaya-stream/vendored", "io-webdav?/vendored", "io-jmap?/vendored", "io-msgraph?/vendored", "io-google-people?/vendored"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[build-dependencies]
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
calcard = { version = "0.3", optional = true }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.4"
clap_mangen = "0.3"
comfy-table = "7"
crossterm = { version = "0.29", default-features = false, features = ["serde"] }
dirs = "6"
env_logger = "0.11"
getrandom = { version = "0.4", optional = true }
io-google-people = { version = "0.0.1", default-features = false, features = ["client"], optional = true }
io-http = { version = "0.1", default-features = false }
io-jmap = { version = "0.1", default-features = false, features = ["client"], optional = true }
io-msgraph = { version = "0.0.1", default-features = false, features = ["client"], optional = true }
io-vdir = { version = "0.0.3", default-features = false, features = ["client", "parser", "serde"], optional = true }
io-webdav = { version = "0.0.1", default-features = false, features = ["client"], optional = true }
log = "0.4"
percent-encoding = "2"
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["terminal", "table", "prompt", "wizard", "spinner", "carddav"] }
pimalaya-config = { version = "0.0.1", default-features = false, features = ["toml", "secret"] }
pimalaya-stream = { version = "0.0.1", default-features = false, features = ["std"] }
pimconf = { version = "0.1.0", default-features = false, features = ["search", "client"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
toml = "0.8"
toml_edit = "0.22"
url = { version = "2.5", features = ["serde"] }
vcard-rs = { version = "0.0.1", default-features = false, features = ["parser"], optional = true }

[patch.crates-io]
io-google-people.git = "https://github.com/pimalaya/io-google-people"
io-http.git = "https://github.com/pimalaya/io-http"
io-jmap.git = "https://github.com/pimalaya/io-jmap"
io-msgraph.git = "https://github.com/pimalaya/io-msgraph"
io-vdir.git = "https://github.com/pimalaya/io-vdir"
io-webdav.git = "https://github.com/pimalaya/io-webdav"
pimalaya-cli.git = "https://github.com/pimalaya/cli"
pimalaya-config.git = "https://github.com/pimalaya/config"
pimconf.git = "https://github.com/pimalaya/pimconf"
vcard-rs.git = "https://github.com/pimalaya/vcard"
